--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -183,12 +183,12 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x217c42a5550>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x19ae1e865f8>,\n",
        " 'prcp': 0.08,\n",
-       " 'date': '2010-01-01',\n",
        " 'station': 'USC00519397',\n",
-       " 'id': 1,\n",
-       " 'tobs': 65.0}"
+       " 'tobs': 65.0,\n",
+       " 'date': '2010-01-01',\n",
+       " 'id': 1}"
       ]
      },
      "execution_count": 12,
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        " ...]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
        "[2021 rows x 1 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1398,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1509,7 @@
        "[2021 rows x 1 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
        "std        0.461190"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
        " ('USC00519523', 2669)]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1833,7 @@
        "[352 rows x 1 columns]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
